<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pavel.foodel1.SingIn"
    android:background="@drawable/foodel_main">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:orientation="vertical"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">
        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signInEmail"
            android:hint="@string/email"
            android:textSize="20dp"
            android:fontFamily="sans-serif-medium"
            android:textColorHint="@color/fontColor"
            android:textColor="@color/fontColor"
            android:inputType="textEmailAddress"
            />

        <EditText
            android:id="@+id/signInPassword"
            android:layout_width="match_parent"
            android:textColor="@color/fontColor"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textSize="20dp"
            android:textColorHint="@color/fontColor"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1" />


            <Button
                android:id="@+id/signInButton"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="OR"
                android:gravity="center"/>
            <Button
                android:id="@+id/signInRegistrationButton"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/registrate"
                android:textStyle="bold"
                android:gravity="center"/>
    </LinearLayout>

</LinearLayout>