...
        android:fontFamily="sans-serif"
        android:textColor="@color/fontColor"
        android:textSize="22dp"
        android:textColorHint="@color/fontColor"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/deletePassword" />

    <Button
        android:text="Delete account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/deleteButton"
        style="?android:textAppearanceSmall"
        android:gravity="center"
        android:textStyle="bold"/>
        </LinearLayout>
    </ScrollView>

...
