...
    <string name="tiigerkrevett_kreveti_ceviche_avokaadokreem_ampanja_elee_mango_coulis_r_stsai_9">Tiigerkrevett - Kreveti ceviche / Avokaadokreem / Šampanjaželee / Mango coulis / Röstsai 9€</string>
    <string name="tuunikala_tuunikala_carpaccio_seesami_tuhk_marineeritud_spargel_soja_9">Tuunikala - Tuunikala carpaccio / Seesami tuhk / Marineeritud spargel / Soja 9€</string>
    <string name="barbarissi_br_lee_plaksuv_suhkur_marjad_5">Barbarissi brülee - Plaksuv suhkur / Marjad 5€</string>
    <string name="okolaad_valge_okolaadi_mousse_passion_okolaadipaber_rabarber_5">Šokolaad - Valge šokolaadi mousse / Passion / Šokolaadipaber / Rabarber 5€</string>
    <string name="vaarikas_vaarika_sorbee_vaarikad_vaarikabiskviit_mascarpone_5">Vaarikas - Vaarika sorbee / Vaarikad / Vaarikabiskviit / Mascarpone 5€</string>
    <string name="maasikas_maasika_h_ve_maasika_sorbee_maasikad_besee_5">Maasikas - Maasika hüüve / Maasika sorbee / Maasikad / Besee 5€</string>
    <string name="action_sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registrate">Sign Up</string>
    <string name="repeat_password">Submit Password</string>
    <string name="confirm">Confirm</string>
    <string name="hello_word" />
    <string name="pay">Pay</string>
    <string name="city">City</string>
    <string name="address">Address</string>
...
